# otter-swag-rust

./: Cargo.toml  background.rs  main  main.rs  menu.rs  run.sh  surface.rs
models/: menu.rs  mod.rs  otter.rs
src/: lib.rs
tests/: game_tests.rs
