[package]
name = "otter-swag"
version = "0.1.0"
authors = ["Iheanyi Ekechukwu <iekechukwu@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8"

[dependencies.sdl2]
version = "0.37"
features = ["mixer"]

[[bin]]
name = "otter-swag"
path = "main.rs"

[lib]
name = "otter_swag"
path = "src/lib.rs"

[[test]]
name = "game_tests"
path = "tests/game_tests.rs"
